# fh-deploy

./: .gitignore  README.md
coolify/: .gitignore  README.md  main.py
droplet/: .gitignore  README.md  main.py
droplet-ssl-with-ci/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
droplet-ssl-with-ci/.github/workflows/: deploy.yml
droplet-ssl-with-ci/config/: docker-compose.yml
droplet-ssl-with-ci/config/nginx/site-confs/: default.conf
fly/: .sesskey  Dockerfile  README.md  fly.toml  main.py
heroku/: README.md  main.py
huggingface/: .gitignore  README.md  main.py  requirements.txt
modal/: README.md  app.py  deploy.py  requirements-dev.txt  requirements.txt
railway/: README.md  main.py
replit/: .replit  README.md  main.py
vercel/: .gitignore  README.md  main.py
